fix duplicated entrypoint